Release 2.0.8: OP-only give, clear/giveall, warden damage and recipe.
Restrict /haqi give to OP; add clear and giveall; warden mob haqi deals 12; new warden item recipe uses echo shards.