@@ -8,6 +8,7 @@ import com.freshwater.haqiworld.plugin.haqi.HaqiTier;
 import com.freshwater.haqiworld.plugin.voice.VoiceManager;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
+import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -43,7 +44,8 @@ public final class HaqiCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (args.length == 0) {
-            sender.sendMessage(Component.text("用法: /haqi <give|top|unlock|debug|status>", NamedTextColor.YELLOW));
+            sender.sendMessage(Component.text(
+                    "用法: /haqi <give|giveall|clear|top|unlock|debug|status>", NamedTextColor.YELLOW));
             return true;
         }
         String sub = args[0].toLowerCase(Locale.ROOT);
@@ -52,9 +54,12 @@ public final class HaqiCommand implements CommandExecutor, TabCompleter {
             case "debug" -> debug(sender, args);
             case "unlock" -> unlock(sender, args);
             case "give" -> give(sender, args);
+            case "giveall" -> giveAll(sender);
+            case "clear" -> clear(sender, args);
             case "status" -> status(sender);
             default -> {
-                sender.sendMessage(Component.text("用法: /haqi <give|top|unlock|debug|status>", NamedTextColor.YELLOW));
+                sender.sendMessage(Component.text(
+                        "用法: /haqi <give|giveall|clear|top|unlock|debug|status>", NamedTextColor.YELLOW));
                 yield true;
             }
         };
@@ -121,8 +126,12 @@ public final class HaqiCommand implements CommandExecutor, TabCompleter {
     }
 
     private boolean give(CommandSender sender, String[] args) {
+        if (!sender.hasPermission("fhw.give")) {
+            sender.sendMessage(Component.text("权限不足（需要 OP / fhw.give）。", NamedTextColor.RED));
+            return true;
+        }
         if (!(sender instanceof Player player)) {
-            sender.sendMessage(Component.text("必须由玩家执行。", NamedTextColor.RED));
+            sender.sendMessage(Component.text("必须由玩家执行。控制台请用 /haqi giveall。", NamedTextColor.RED));
             return true;
         }
         String which = args.length >= 2 ? args[1].toLowerCase(Locale.ROOT) : "all";
@@ -160,6 +169,76 @@ public final class HaqiCommand implements CommandExecutor, TabCompleter {
         return true;
     }
 
+    /** Give every online player one basic haqi item and ensure BASIC unlock. */
+    private boolean giveAll(CommandSender sender) {
+        if (!sender.hasPermission("fhw.give")) {
+            sender.sendMessage(Component.text("权限不足（需要 OP / fhw.give）。", NamedTextColor.RED));
+            return true;
+        }
+        int count = 0;
+        for (Player player : Bukkit.getOnlinePlayers()) {
+            player.getInventory().addItem(HaqiItems.createHaqi(HaqiTier.BASIC));
+            if (PlayerData.getUnlockedLevel(player) < HaqiTier.BASIC.level()) {
+                PlayerData.setTier(player, HaqiTier.BASIC);
+            }
+            player.sendMessage(Component.text("[哈气] 管理员发放了一份基础哈气。", NamedTextColor.AQUA));
+            count++;
+        }
+        sender.sendMessage(Component.text("已向 " + count + " 名在线玩家发放基础哈气。", NamedTextColor.GREEN));
+        return true;
+    }
+
+    /**
+     * Clear haqi items from inventory and reset unlock to BASIC.
+     * Usage: /haqi clear [player|all]
+     */
+    private boolean clear(CommandSender sender, String[] args) {
+        if (!sender.hasPermission("fhw.clear")) {
+            sender.sendMessage(Component.text("权限不足（需要 OP / fhw.clear）。", NamedTextColor.RED));
+            return true;
+        }
+        if (args.length < 2) {
+            if (sender instanceof Player self) {
+                int removed = clearPlayer(self);
+                sender.sendMessage(Component.text(
+                        "已清除你的哈气物品（" + removed + "）并退回基础解锁。", NamedTextColor.GREEN));
+                return true;
+            }
+            sender.sendMessage(Component.text("用法: /haqi clear <玩家名|all>", NamedTextColor.YELLOW));
+            return true;
+        }
+        String target = args[1];
+        if (target.equalsIgnoreCase("all") || target.equalsIgnoreCase("@a")) {
+            int players = 0;
+            int items = 0;
+            for (Player player : Bukkit.getOnlinePlayers()) {
+                items += clearPlayer(player);
+                players++;
+            }
+            sender.sendMessage(Component.text(
+                    "已清除 " + players + " 名在线玩家的哈气（共 " + items + " 件）并全部退回基础解锁。",
+                    NamedTextColor.GREEN));
+            return true;
+        }
+        Player player = Bukkit.getPlayerExact(target);
+        if (player == null) {
+            sender.sendMessage(Component.text("玩家不在线: " + target, NamedTextColor.RED));
+            return true;
+        }
+        int removed = clearPlayer(player);
+        sender.sendMessage(Component.text(
+                "已清除 " + player.getName() + " 的哈气物品（" + removed + "）并退回基础解锁。",
+                NamedTextColor.GREEN));
+        player.sendMessage(Component.text("[哈气] 管理员已清除你的哈气并退回基础解锁。", NamedTextColor.YELLOW));
+        return true;
+    }
+
+    private static int clearPlayer(Player player) {
+        int removed = HaqiItems.clearHaqiItems(player);
+        PlayerData.setTier(player, HaqiTier.BASIC);
+        return removed;
+    }
+
     private boolean status(CommandSender sender) {
         if (!(sender instanceof Player player)) {
             sender.sendMessage(Component.text("必须由玩家执行。", NamedTextColor.RED));
@@ -180,13 +259,34 @@ public final class HaqiCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (args.length == 1) {
-            return Arrays.asList("give", "top", "unlock", "debug", "status").stream()
+            List<String> subs = new ArrayList<>(List.of("top", "debug", "status"));
+            if (sender.hasPermission("fhw.give")) {
+                subs.add("give");
+                subs.add("giveall");
+            }
+            if (sender.hasPermission("fhw.unlock")) {
+                subs.add("unlock");
+            }
+            if (sender.hasPermission("fhw.clear")) {
+                subs.add("clear");
+            }
+            return subs.stream()
                     .filter(s -> s.startsWith(args[0].toLowerCase(Locale.ROOT)))
                     .collect(Collectors.toList());
         }
         if (args.length == 2 && args[0].equalsIgnoreCase("debug")) {
             return Arrays.asList("on", "off").stream()
                     .filter(s -> s.startsWith(args[1].toLowerCase(Locale.ROOT)))
+                    .collect(Collectors.toList());
+        }
+        if (args.length == 2 && args[0].equalsIgnoreCase("clear") && sender.hasPermission("fhw.clear")) {
+            List<String> names = new ArrayList<>();
+            names.add("all");
+            for (Player p : Bukkit.getOnlinePlayers()) {
+                names.add(p.getName());
+            }
+            return names.stream()
+                    .filter(s -> s.toLowerCase(Locale.ROOT).startsWith(args[1].toLowerCase(Locale.ROOT)))
                     .collect(Collectors.toList());
         }
         if (args.length == 2 && (args[0].equalsIgnoreCase("unlock") || args[0].equalsIgnoreCase("give"))) {
